unpackaged/main/default/objects/Account_Portfolio_Assignment__c/fields/BSF_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>BSF_Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BSF Portfolio</label>
    <referenceTo>BSF_Portfolio__c</referenceTo>
    <relationshipLabel>AccountPortfolioAssignments</relationshipLabel>
    <relationshipName>AccountPortfolioAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>