unpackaged/main/default/objects/Account_Portfolio_Assignment__c/fields/Division_Name__c.field-meta.xml
<CustomField>
    <fullName>Division_Name__c</fullName>
    <formula>IF( ISPICKVAL( BSF_Portfolio__r.Portfolio_Type__c , &#39;DSVP&#39;) ,  BSF_Portfolio__r.Portfolio_Name__c ,IF( ISPICKVAL(  BSF_Portfolio__r.Parent_Portfolio__r.Portfolio_Type__c , &#39;DSVP&#39;),  BSF_Portfolio__r.Parent_Portfolio__r.Portfolio_Name__c 
,IF( ISPICKVAL( BSF_Portfolio__r.Parent_Portfolio__r.Parent_Portfolio__r.Portfolio_Type__c , &#39;DSVP&#39;),  BSF_Portfolio__r.Parent_Portfolio__r.Parent_Portfolio__r.Portfolio_Name__c , 
IF(  ISPICKVAL( BSF_Portfolio__r.Parent_Portfolio__r.Parent_Portfolio__r.Parent_Portfolio__r.Portfolio_Type__c , &#39;DSVP&#39;), BSF_Portfolio__r.Parent_Portfolio__r.Parent_Portfolio__r.Parent_Portfolio__r.Portfolio_Name__c , 
IF(  ISPICKVAL( BSF_Portfolio__r.Parent_Portfolio__r.Parent_Portfolio__r.Parent_Portfolio__r.Parent_Portfolio__r.Portfolio_Type__c , &#39;DSVP&#39;), BSF_Portfolio__r.Parent_Portfolio__r.Parent_Portfolio__r.Parent_Portfolio__r.Parent_Portfolio__r.Portfolio_Name__c , &#39;&#39; )) ) ))</formula>
    <label>Division Name</label>
    <type>Text</type>
</CustomField>