unpackaged/main/default/objects/Account_Portfolio_Assignment__c/fields/Region_Id__c.field-meta.xml
<CustomField>
    <fullName>Region_Id__c</fullName>
    <formula>IF( ISPICKVAL( BSF_Portfolio__r.Portfolio_Type__c , &#39;RDSE&#39;) , BSF_Portfolio__r.Portfolio_Code__c,
IF( ISPICKVAL( BSF_Portfolio__r.Parent_Portfolio__r.Portfolio_Type__c , &#39;RDSE&#39;), BSF_Portfolio__r.Parent_Portfolio__r.Portfolio_Code__c
,IF( ISPICKVAL( BSF_Portfolio__r.Parent_Portfolio__r.Parent_Portfolio__r.Portfolio_Type__c , &#39;RDSE&#39;), BSF_Portfolio__r.Parent_Portfolio__r.Parent_Portfolio__r.Portfolio_Code__c, 
IF( ISPICKVAL( BSF_Portfolio__r.Parent_Portfolio__r.Parent_Portfolio__r.Parent_Portfolio__r.Portfolio_Type__c , &#39;RDSE&#39;), BSF_Portfolio__r.Parent_Portfolio__r.Parent_Portfolio__r.Parent_Portfolio__r.Portfolio_Code__c, &#39;&#39;)) ) )</formula>
    <label>Region Id</label>
    <type>Text</type>
</CustomField>