unpackaged/main/default/objects/Account_Portfolio_Assignment__c/fields/Taxonomy_Type__c.field-meta.xml
<CustomField>
    <fullName>Taxonomy_Type__c</fullName>
    <formula>TEXT(BSF_Portfolio__r.Taxonomy_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxonomy Type</label>
    <type>Text</type>
</CustomField>