unpackaged/main/default/objects/Account_Portfolio_Assignment__c/listViews/Account_Specific_view.listView-meta.xml
<ListView>
    <fullName>Account_Specific_view</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>BSF_Portfolio__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>Nestle USA</value>
    </filters>
    <label>Account Specific view</label>
</ListView>