unpackaged/main/default/objects/Account_Portfolio_Assignment__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>BSF_Portfolio__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
        <value>YMCA</value>
    </filters>
    <filters>
        <field>BSF_Portfolio__c</field>
        <operation>contains</operation>
        <value>MA East</value>
    </filters>
    <label>All</label>
</ListView>